--- a/base/sub-platform-navigator.yaml
+++ b/base/sub-platform-navigator.yaml
@@ -6,6 +6,7 @@ metadata:
     backup.integration.ibm.com/component: subscription        
 spec:
   channel: v7.3-sc2
+  installPlanApproval: Automatic
   name: ibm-integration-platform-navigator
   source: ibm-operator-catalog
   sourceNamespace: openshift-marketplace
