--- a/base/api-manager-certs.yaml
+++ b/base/api-manager-certs.yaml
@@ -15,6 +15,7 @@ apiVersion: cert-manager.io/v1
 kind: Issuer
 metadata:
   name: ingress-issuer
+  namespace: apic-test
   labels: {
     app.kubernetes.io/instance: "api-manager",
     app.kubernetes.io/managed-by: "ibm-apiconnect",
@@ -28,6 +29,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: ingress-ca
+  namespace: apic-test
   labels: {
     app.kubernetes.io/instance: "api-manager",
     app.kubernetes.io/managed-by: "ibm-apiconnect",
@@ -56,6 +58,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: portal-admin-client
+  namespace: apic-test
   labels: {
     app.kubernetes.io/instance: "api-manager",
     app.kubernetes.io/managed-by: "ibm-apiconnect",
@@ -85,6 +88,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: gateway-client-client
+  namespace: apic-test
   labels: {
     app.kubernetes.io/instance: "api-manager",
     app.kubernetes.io/managed-by: "ibm-apiconnect",
@@ -114,6 +118,7 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: analytics-ingestion-client
+  namespace: apic-test
   labels: {
     app.kubernetes.io/instance: "api-manager",
     app.kubernetes.io/managed-by: "ibm-apiconnect",
