portal and gateway

--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -8,4 +8,7 @@ resources:
   - api-manager-certs.yaml
   - api-manager.yaml
   - api-analytics.yaml
+  - api-portal.yaml
+  - api-gateway-certs.yaml
+  - api-gateway.yaml
 namespace: apic-test
