--- a/newbase/sub-datapower.yaml
+++ b/newbase/sub-datapower.yaml
@@ -4,7 +4,9 @@ metadata:
   name: datapower-operator
   namespace: cp4i-apic
   labels:
-    backup.integration.ibm.com/component: subscription        
+    backup.integration.ibm.com/component: subscription  
+  annotations:
+    argocd.argoproj.io/sync-wave: "5"       
 spec:
   channel: v1.11-sc2
   installPlanApproval: Automatic
