--- a/newbase/sub-foundational.yaml
+++ b/newbase/sub-foundational.yaml
@@ -4,7 +4,9 @@ metadata:
   name: ibm-common-service-operator
   namespace: cp4i-apic
   labels:
-    backup.integration.ibm.com/component: subscription        
+    backup.integration.ibm.com/component: subscription    
+  annotations:
+    argocd.argoproj.io/sync-wave: "2"     
 spec:
   channel: v4.6
   installPlanApproval: Automatic
