--- a/newbase/sub-platform-navigator.yaml
+++ b/newbase/sub-platform-navigator.yaml
@@ -4,7 +4,9 @@ metadata:
   name: ibm-integration-platform-navigator
   namespace: cp4i-apic
   labels:
-    backup.integration.ibm.com/component: subscription        
+    backup.integration.ibm.com/component: subscription  
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"     
 spec:
   channel: v7.3-sc2
   installPlanApproval: Automatic
