--- a/2dcdrbase/sub-apic.yaml
+++ b/2dcdrbase/sub-apic.yaml
@@ -3,7 +3,9 @@ kind: Subscription
 metadata:
   name: ibm-apiconnect
   labels:
-    backup.integration.ibm.com/component: subscription        
+    backup.integration.ibm.com/component: subscription 
+  annotations:
+    argocd.argoproj.io/sync-wave: "4"       
 spec:
   channel: v5.2-sc2
   installPlanApproval: Automatic
