--- a/2dcdrbase/sub-cert-manager.yaml
+++ b/2dcdrbase/sub-cert-manager.yaml
@@ -3,7 +3,9 @@ kind: Subscription
 metadata:
   name: openshift-cert-manager-operator
   labels:
-    backup.integration.ibm.com/component: subscription        
+    backup.integration.ibm.com/component: subscription   
+  annotations:
+    argocd.argoproj.io/sync-wave: "3"     
 spec:
   channel: stable-v1
   installPlanApproval: Automatic
