--- a/2dcdrbase/kustomization.yaml
+++ b/2dcdrbase/kustomization.yaml
@@ -1,8 +1,14 @@
 resources:
   - sub-platform-navigator.yaml
+  - sub-foundational.yaml
+  - sub-cert-manager.yaml
   - sub-apic.yaml
   - sub-datapower.yaml
-  - sub-cert-manager.yaml
-  - sub-foundational.yaml
   - platform-ui.yaml
+  - mgmt-encryption-key-secret.yaml
+  - ptl-encryption-key-secret.yaml
+  - issuer.yaml
+  - mgmt-tls-client-cert.yaml
+  - ingress-issuer.yaml
+  - ptl-tls-client-cert.yaml
 namespace: apic-test
